tests/invalid/list_slice_step_unsupported/main.py
def run_case() -> None:
    xs: list[int] = [0, 1, 2, 3]
    ys: list[int] = xs[0:4:2]
    print(ys)


if __name__ == "__main__":
    run_case()
